try fix not display in gh pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NasgorSaptoBarokah</title>
-    <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="src/output.css">
   </head>
   <body class="bg-white">
     <!-- ========== HEADER ========== -->
@@ -16,7 +16,7 @@
         <div class="flex items-center justify-between">
           <a
             class="flex-none font-semibold text-xl text-black focus:outline-none focus:opacity-80"
-            href="#" aria-label="Brand"><img src="logo.png" alt="logo"
+            href="#" aria-label="Brand"><img src="src/logo.png" alt="logo"
               width="200px"></a>
 
           <!-- Collapse Button -->
@@ -114,35 +114,35 @@
           <div class="hs-carousel-slide">
             <div
               class="flex justify-center items-center h-full bg-white-100 p-6">
-              <img src="pic1.png" alt
+              <img src="src/pic1.png" alt
                 class="max-w-full max-h-full object-contain">
             </div>
           </div>
           <div class="hs-carousel-slide">
             <div
               class="flex justify-center items-center h-full bg-white-200 p-6">
-              <img src="pic2.png" alt
+              <img src="src/pic2.png" alt
                 class="max-w-full max-h-full object-contain">
             </div>
           </div>
           <div class="hs-carousel-slide">
             <div
               class="flex justify-center items-center h-full bg-white-300 p-6">
-              <img src="pic3.png" alt
+              <img src="src/pic3.png" alt
                 class="max-w-full max-h-full object-contain">
             </div>
           </div>
           <div class="hs-carousel-slide">
             <div
               class="flex justify-center items-center h-full bg-white-300 p-6">
-              <img src="pic4.png" alt
+              <img src="src/pic4.png" alt
                 class="max-w-full max-h-full object-contain">
             </div>
           </div>
           <div class="hs-carousel-slide">
             <div
               class="flex justify-center items-center h-full bg-white-300 p-6">
-              <img src="pic5.png" alt
+              <img src="src/pic5.png" alt
                 class="max-w-full max-h-full object-contain">
             </div>
           </div>
@@ -195,7 +195,7 @@
             class=" group flex flex-col h-full bg-white hover:border-transparent hover:shadow-lg focus:outline-none focus:border-transparent focus:shadow-lg transition duration-300 rounded-xl p-5 max-w-xs mx-auto"
             href="#">
             <div class="text-center">
-              <img src="ourmenu1.png" alt="Breakfast" class="mx-auto">
+              <img src="src/ourmenu1.png" alt="Breakfast" class="mx-auto">
             </div>
             <div class="my-6 text-center">
               <h3 class="text-xl font-bold">Breakfast</h3>
@@ -213,7 +213,7 @@
             class=" group flex flex-col h-full bg-white hover:border-transparent hover:shadow-lg focus:outline-none focus:border-transparent focus:shadow-lg transition duration-300 rounded-xl p-5 max-w-xs mx-auto"
             href="#">
             <div class="text-center">
-              <img src="ourmenu2.png" alt="Main Dishes" class="mx-auto">
+              <img src="src/ourmenu2.png" alt="Main Dishes" class="mx-auto">
             </div>
             <div class="my-6 text-center">
               <h3 class="text-xl font-bold">Main Dishes</h3>
@@ -231,7 +231,7 @@
             class=" group flex flex-col h-full bg-white hover:border-transparent hover:shadow-lg focus:outline-none focus:border-transparent focus:shadow-lg transition duration-300 rounded-xl p-5 max-w-xs mx-auto"
             href="#">
             <div class="text-center">
-              <img src="ourmenu3.png" alt="Drinks" class="mx-auto">
+              <img src="src/ourmenu3.png" alt="Drinks" class="mx-auto">
             </div>
             <div class="my-6 text-center">
               <h3 class="text-xl font-bold">Drinks</h3>
@@ -252,7 +252,7 @@
         <div
           class="grid grid-cols-1 gap-4 lg:grid-cols-2 lg:grid-rows-1 lg:gap-8">
           <div class="lg:col-span-1 lg:mt-0 mt-10">
-            <img class="w-full h-50 rounded-xl" src="nasgor.jpg"
+            <img class="w-full h-50 rounded-xl" src="src/nasgor.jpg"
               alt="Hero Image">
           </div>
           <div class="my-auto">
@@ -292,7 +292,7 @@
             href="#">
             <div class="aspect-w-16 aspect-h-11">
               <img class="w-full object-cover rounded-xl"
-                src="pic/serve1.png">
+                src="src/pic/serve1.png">
             </div>
             <div class="my-6">
               <h3 class="text-xl font-bold text-white">
@@ -313,7 +313,7 @@
             href="#">
             <div class="aspect-w-16 aspect-h-11">
               <img class="w-full object-cover rounded-xl"
-                src="pic/serve2.png">
+                src="src/pic/serve2.png">
             </div>
             <div class="my-6">
               <h3 class="text-xl font-bold text-white">
@@ -334,7 +334,7 @@
             class="group flex flex-col h-full  hover:border-transparent hover:shadow-lg focus:outline-none focus:border-transparent focus:shadow-lg transition duration-300 rounded-xl p-5"
             href="#">
             <img class="w-fullobject-cover rounded-xl"
-              src="pic/serve3.png">
+              src="src/pic/serve3.png">
             <div class="my-6">
               <h3 class="text-xl font-bold text-white">
                 Events
@@ -349,7 +349,7 @@
               class="group flex flex-col h-full  hover:border-transparent hover:shadow-lg focus:outline-none focus:border-transparent focus:shadow-lg transition duration-300 rounded-xl p-5"
               href="#">
               <img class="w-full object-cover rounded-xl"
-                src="pic/serve4.png">
+                src="src/pic/serve4.png">
               <div class="my-6">
                 <h3 class="text-xl font-bold text-white">
                   Weddings
@@ -431,5 +431,5 @@
       </footer>
       <!-- ========== END FOOTER ========== -->
     </body>
-    <script src="../node_modules/preline/dist/preline.js"></script>
+    <script src="node_modules/preline/dist/preline.js"></script>
   </html>
