--- a/index.html
+++ b/index.html
@@ -391,5 +391,5 @@
       </footer>
       <!-- ========== END FOOTER ========== -->
     </body>
-    <script src="node_modules/preline/dist/preline.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/preline@latest/dist/preline.min.js"></script>
   </html>
