--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
     <link rel="icon" type="image/png" sizes="16x16" href="src/favicon-16x16.png">
     <link rel="icon" href="src/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="src/output.css">
-    <script type="text/javascript" src="//script.crazyegg.com/pages/scripts/0127/0025.js" async="async" ></script>
+    <script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:5199077,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+    
   </head>
   <body class="bg-gray-100">
 
